# data

./: Cargo.toml
datasets/: gate_parts.json  gate_rpus.json  gates.json  inputs.json  kd_tree.json  parts.json  response_functions.json  some_tree.json
src/: clean_up.rs  kd_tree.rs  main.rs  matrix.rs  node_linker.rs  plotter.rs  simulation.rs  tree_builder.rs  vector.rs
