[package]
name = "data"
version = "0.1.0"
authors = ["Filip <lazoviccorp@gmail.com>"]
edition = "2018"

[dependencies]
regex = "1"
serde_json = "1.0"
serde = "1.0"
serde_derive = "1.0"
fs_extra = "1.1.0"
rand = "0.7.3"
plotlib = "0.5.1"
argmin = "0.3.1"
num-complex = "0.3"
sparse21 = "0.2.1"
ndarray = "0.13"
ndarray-linalg = { version = "0.12", features = ["intel-mkl"] }